--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -825,20 +825,21 @@ description even if the category of the item does *not* match with the specified
 
 Steps:
 
-1. Type the command with a category specified as shown in the screenshot below:
+1. If you do not remember the exact description of the item to add, you can type the command "add" with a category
+specified as shown in the screenshot below.
 
 //.Screenshot of user input (category) into Command Box for Add Command in Cashier Tab
 image::cashierUG/AddCommand1.png[width="620"]
 
 
 [start = 2]
-2. Enter the desired description and quantity according to the items suggested by Leo as shown below:
+2. Then, you can enter the desired description and quantity according to the items suggested by Leo as shown below.
 
 //.Screenshot of the user input (description, quantity) into Command Box for Add Command in Cashier Tab
 image::cashierUG/AddCommand2.png[width="600"]
 
 [start = 3]
-. Hit `Enter`
+. Now, you can hit `Enter`.
 
 //.Screenshot of the response message for Add Command in Cashier Tab
 image::cashierUG/AddCommand3.png[width="600"]
@@ -859,13 +860,13 @@ The specified index should correspond to the row index of the item in the table.
 
 * Steps:
 
-1. Type the command with an index specified as shown in the screenshot below:
+1. To delete an item, type the command "delete" with an index specified as shown in the screenshot below.
 
 //.Screenshot of the user input into Command Box for Delete Command in Cashier Tab
 image::cashierUG/DeleteCommand1.png[width="600"]
 
 [start = 2]
-. Hit `Enter`
+. Now, you can hit `Enter`.
 
 //.Screenshot of the response message for Delete Command in Cashier Tab
 image::cashierUG/DeleteCommand2.png[width="600"]
@@ -897,24 +898,24 @@ If the quantity is invalid, Leo will display the quantity of stock left.
 
 * Steps:
 
-1.1 To edit by *index*, enter the command with an index and quantity specified as shown in the screenshot below:
+1.1 To edit by its *index*, you can enter the command "edit" with an index and quantity specified as shown in the screenshot below.
 
 //.Screenshot of user input (index, description) into Command Box for Edit Command in Cashier Tab
 image::cashierUG/EditCommand1.png[width="600"]
 
 [start = 2]
-1.2. To edit by *description*, enter the required description and quantity as shown below:
+1.2. To edit by its *description*, you can enter the required description and quantity as shown below.
 
 //.Screenshot of user input (description, quantity) into Command Box for Edit Command in Cashier Tab
 image::cashierUG/EditCommand3.png[width="600"]
 
 [start = 2]
-. Hit `Enter`
+. Now, you can hit `Enter`.
 
 //.Screenshot of response message for Edit Command in Cashier Tab
 image::cashierUG/EditCommand2.png[width="600"]
 
-If successfully updated, Leo will respond with a response message. The quantity will then be updated in the table.
+If successfully updated, Leo will respond with a response message. The quantity will now be updated in the table.
 
 
 ==== Set the Cashier-In-Charge
@@ -936,13 +937,13 @@ This step must be executed before checking out. Else, checkout cannot proceed.
 
 * Steps:
 
-1. Type the command with the cashier's name specified as shown in the screenshot below:
+1. To set a cashier, type the command "cashier" with the cashier's name specified as shown in the screenshot below.
 
 //.Screenshot of user input into Command Box for Set Cashier Command in Cashier Tab
 image::cashierUG/SetCashierCommand1.png[width="600"]
 
 [start = 2]
-. Hit `Enter`
+. Now, you can hit `Enter`.
 
 //.Screenshot of response message for Set Cashier Command in Cashier Tab
 image::cashierUG/SetCashierCommand2.png[width="600"]
@@ -971,13 +972,13 @@ You must set the cashier before checking out. Else, checkout cannot proceed.
 
 * Steps:
 
-1. Type the command and specify the amount that the customer is paying as shown in the screenshot below:
+1. To checkout, you can type the command "checkout" and specify the amount that the customer is paying as shown in the screenshot below.
 
 //.Screenshot of user input into Command Box for Checkout Command in Cashier Tab
 image::cashierUG/CheckoutCommand1.png[width="600"]
 
 [start = 2]
-. Hit `Enter`
+. Now, you can hit `Enter`.
 
 //.Screenshot of response message for Checkout Command in Cashier Tab
 image::cashierUG/CheckoutCommand2.png[width="600"]
@@ -1008,13 +1009,13 @@ This command is irreversible. Please use at your own discretion.
 
 * Steps:
 
-1. Type only the "clear" command word as shown in the screenshot below:
+1. To clear, type the "clear" command word only as shown in the screenshot below.
 
 //.Screenshot of user input into Command Box for Clear Command in Cashier Tab
 image::cashierUG/ClearCommand1.png[width="600"]
 
 [start = 2]
-. Hit `Enter`
+. Now, you can hit `Enter`.
 
 //.Screenshot of response message for Clear Command in Cashier Tab
 image::cashierUG/ClearCommand2.png[width="600"]
