Add screenshots to UG

--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -403,9 +403,16 @@ After filtering specific bodies, you may now want to view the full list of bodie
 
 1. Mortago shows filtered list of bodies.
 
+image::list1.png[]
+
 2. Type `list -b` in the Command Line Interface (CLI).
 
+image::list2.png[]
+
 3. Mortago shows unfiltered list of bodies.
+
+image::list3.png[]
+
 // end::list[]
 
 // tag::select[]
