Changes: - Documentation update for project portfolio page, user guide and developer guide - Update some UML diagrams for better formatting

--- a/docs/team/ang-zeyu.adoc
+++ b/docs/team/ang-zeyu.adoc
@@ -8,7 +8,7 @@
 My team and I were tasked with enhancing, or morphing an existing _address book_ application, built on JavaFX, for our software engineering
 project.
 
-We chose the latter, which's end end product was _TravelPal_,  a desktop travelling companion application catered
+We chose the latter, which's end product was _TravelPal_,  a desktop travelling companion application catered
 for leisure travellers. This application allows travellers to manage their travelling itinerary, bookings, expenses and inventory
 conveniently in one place, while also providing various other features catered to leisure travellers.
 
@@ -22,40 +22,45 @@ trip with both multimedia and text.
 
 == Summary of contributions
 
-* *Main contribution*: added the *diary* feature.
-+
-image::diary/userguide/welcome_to_diary_image.png[]
-** What it does: Overall, this feature allows the user to key in memorable details of his / her travels, and store multimedia such
-as photos of the trip, displayed in a user friendly and eye-catching format.
-** Justification: Leisure travellers often want to reminisce on previous trips they have made long after the trip,
-or share its details with friends and loved ones.
-** Highlights: Due to the large amounts of displayable multimedia, the user interface of this feature was most
-challenging to implement, requiring much analysis and consideration
-in striking a balance between code performance and organization.
+==== Main contribution 1: Implemented the diary feature.
 
-* *Second Main Contribution*: Base _address book_ code refactor
-** What: Refactored all of the `logic` code component of the base _address book_ code for common use in _TravelPal_,
+image::diary/userguide/welcome_to_diary_image.png[width="90%" align="center"]
+* What it does: Overall, this feature allows the user to key in memorable details of his / her travels, and store multimedia such
+as photos of the trip, displayed in a user friendly and eye-catching format.
+* Justification: Leisure travellers often want to reminisce on previous trips they have made long after the trip,
+or share its details with friends and loved ones.
+* Highlights: Due to the large amounts of displayable multimedia, the user interface of this feature was most
+challenging to implement, requiring much analysis and consideration
+in striking a balance between code performance and organization. To ensure support for a range of multimedia in the future,
+the implementation user interface implementation also had to be highly extensible.
+
+'''
+
+==== Main Contribution 2: Base _address book_ code refactor
+
+* What: Refactored all of the `logic` code component of the base _address book_ code for common use in _TravelPal_,
 along with several `ui` components.
-** Justification: Although the code base given to us was extensive, many of the common functionality we had in mind for
+* Justification: Although the code base given to us was extensive, many of the common functionality we had in mind for
 _TravelPal_, such as the ability to switch between pages of the application, was not immediately implementable from _address book_.
-** Highlights: In considering the common functionality needed by the team, it was challenging to find solutions to
+* Highlights: In considering the common functionality needed by the team, it was challenging to find solutions to
 build upon the existing code rather than make intrusive code changes. Given the limited time frame of our project, it was crucial that
 we utilised much of the existing code to speed our development process.
 
-* *Third Main Contribution*: Implemented the base trip manager and preferences screens
-+
-image::Ui.png[]
+'''
 
-** What: The trip manager allows the user to create and delete trips, and serves as the entry point into a single trip's
-sub-features. The preferences screen allows the user to change several configuration options in the application without having to go into the
-`json` text configuration file to edit it.
+==== Main Contribution 3: Implemented the base trip manager screen
+
+image::Ui.png[width="90%" align="center"]
+
+* What: The trip manager allows the user to create and delete trips, and serves as the entry point into a single trip's
+sub-features.
 other sub-features.
-** Justification: These were common features required before the team commence on developing their own sub-features. Moreover,
-having the ability to edit configurations in the application saves the user from having to go manually edit the configuration files
-on their system manually, which can be daunting.
+* Justification: As the application entry point, the trip manager was required before the team commence on developing
+their own sub-features.
 
+'''
 
-* *Code contributed*: [https://nus-cs2103-ay1920s1.github.io/tp-dashboard/#search=&sort=groupTitle&sortWithin=title&since=2019-09-06&timeframe=commit&mergegroup=false&groupSelect=groupByRepos&breakdown=false&tabOpen=true&tabType=authorship&tabAuthor=ang-zeyu&tabRepo=AY1920S1-CS2103T-T11-4%2Fmain%5Bmaster%5D[Functional code]] [https://github.com/AY1920S1-CS2103T-T11-4/main/pulls?q=is%3Apr+author%3Aang-zeyu+is%3Aclosed[Test code]]
+* *Code contributed*: [https://nus-cs2103-ay1920s1.github.io/tp-dashboard/#search=&sort=groupTitle&sortWithin=title&since=2019-09-06&timeframe=commit&mergegroup=false&groupSelect=groupByRepos&breakdown=false&tabOpen=true&tabType=authorship&tabAuthor=ang-zeyu&tabRepo=AY1920S1-CS2103T-T11-4%2Fmain%5Bmaster%5D[Reposense code]] [https://github.com/AY1920S1-CS2103T-T11-4/main/pulls?q=is%3Apr+author%3Aang-zeyu+is%3Aclosed[Github pull requesets]]
 
 * *Other contributions*:
 
@@ -67,7 +72,7 @@ inception, which the team agreed upon. (see https://docs.google.com/document/d/1
 
 ** Project management:
 *** Managed releases `v1.1` - `v1.3` (4 releases) on GitHub: https://github.com/AY1920S1-CS2103T-T11-4/main/releases[releases]
-*** Maintained issue tracker for milestones `1.1` through `1.3` https://github.com/AY1920S1-CS2103T-T11-4/main/issues?q=is%3Aissue+is%3Aclosed[issues]
+*** Maintained issue tracker for milestones `1.1` through `1.4` https://github.com/AY1920S1-CS2103T-T11-4/main/issues?q=is%3Aissue+is%3Aclosed[issues]
 ** Tools:
 *** Set up several continuous integration services (appveyor, coveralls)
 *** Set up team github organization and repo
@@ -76,15 +81,42 @@ inception, which the team agreed upon. (see https://docs.google.com/document/d/1
 == Contributions to the User Guide
 
 |===
-|_Given below is one of the sections I contributed to the User Guide, on the `addphoto` command of the *diary* feature. They showcase my ability to write documentation targeting end-users._
+|
+In developing _TravelPal_, a completely new user guide was needed to provide usage instructions for the various new features.
+
+Shown below is one of the various sections I contributed to the User Guide,
+on adding a photo inside the *diary* feature.
 |===
 
-include::../UserGuide.adoc[tag=diary_ppp2]
+include::../UserGuide.adoc[tag=diary_ppp1]
+NOTE: See the <<UserGuide#, user guide>> for this usage scenario, not included in this project portfolio page.
+
+
 
 == Contributions to the Developer Guide
 
 |===
-|_Given below is one of the sections I contributed to the Developer Guide. They showcase my ability to write technical documentation and the technical depth of my contributions to the project._
+|
+In the course of this project, my team and I realised we developed a substantial amount
+of code on top of the code base given to us.
+Hence, my team and I updated the _TravelPal_ developer guide to better suit our needs.
+
+Below is one of the various sections I contributed, documenting the aspect
+of the diary that stores and displays photos.
 |===
 
 include::../DeveloperGuide.adoc[tag=diary_ppp]
+
+== Conclusion
+
+Developing _TravelPal_ under the various constraints given to us proved to be challenging. Of particular
+note was our inexperience in building an application on top of a given code base.
+
+Nonetheless, using my prior experience of developing organized code, I was able to contribute and implement various suggestions
+which resulted in a highly extensible code base, easing the team development process.
+
+Through thoroughly practicing the striking a balance between the various
+guidelines and principles of good software engineering during this project,
+I have also which would be my key takeaway from this.
+
+
